--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "@types/pino": "^7.0.5",
+    "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "fastify": "^4.1.0",
+    "fastify-auth0-verify": "^0.8.0",
     "fastify-cors": "^6.1.0",
     "mongoose": "^6.4.0",
     "nodemon": "^2.0.16",
