--- a/packages/front/package.json
+++ b/packages/front/package.json
@@ -9,9 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^1.9.1",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/material": "^5.8.7",
+    "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
+    "install": "^0.13.0",
     "next": "12.1.6",
+    "npm": "^8.13.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
