--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "Hotel",
   "version": "1.0.0",
   "main": "index.js",
+  "private": true,
   "license": "MIT",
   "dependencies": {
     "eslint": "^8.18.0",
@@ -22,4 +23,3 @@
     "eslint-plugin-react": "^7.30.0"
   }
 }
-
