--- a/packages/front/package.json
+++ b/packages/front/package.json
@@ -17,9 +17,12 @@
     "dotenv": "^16.0.1",
     "install": "^0.13.0",
     "next": "12.1.6",
+    "next-themes": "^0.2.0",
     "npm": "^8.13.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.27.1",
+    "react-sweet-state": "^2.6.0",
     "swr": "^1.3.0"
   },
   "devDependencies": {
